--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <img src="./imeges/video-image.png" alt="Зображення відео">
 
                 <button class="btn-play-video">
-                    <img src="/imeges/play-btn.svg" alt="Значок відтворення відео">
+                    <img src="./imeges/play-btn.svg" alt="Значок відтворення відео">
                 </button>
             </div>
 
